# hdfs-s3-gateway

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: python-release.yml  python-test.yml  rust-release.yml  rust-test.yml
python/: Cargo.toml  README.md  pyproject.toml
python/hdfs_s3_gateway/: __init__.py  _internal.pyi
python/src/: lib.rs
python/tests/: test_gateway.py  test_parquet_engines.py
scripts/: experiment_parquet.py  run-s3tests.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: listing.rs  metadata.rs  mod.rs  path.rs  range.rs
src/s3/: auth.rs  backpressure.rs  error.rs  mod.rs  server.rs  write_policy.rs
tests/: backpressure_test.rs  conformance.rs  error_propagation.rs  graceful_shutdown.rs  integration.rs  load.rs  minidfs_permission_denial.rs
tests/common/: mod.rs
