[package]
name = "hdfs-s3-gateway-python"
version = "0.1.2"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "_internal"
crate-type = ["cdylib"]
doc = false

[package.metadata.maturin]
name = "hdfs_s3_gateway._internal"

[dependencies]
hdfs-s3-gateway = { path = ".." }
hdfs-native.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
pyo3 = { version = "0.29", features = ["extension-module", "abi3", "abi3-py310"] }

# Test-only hooks used by the Python test-suite to exercise panic/error paths that
# cannot be triggered through the normal public API. NEVER enabled in the release
# wheel (maturin builds with default features only).
[features]
test-hooks = []
